Fix spacing between product popup sections

--- a/buyer/static/styles/product_popup.css
+++ b/buyer/static/styles/product_popup.css
@@ -38,7 +38,7 @@
 }
 
 .product-popup-container .product-popup .image-container h1 {
-    margin: 15px 0 0 0;
+    margin: 15px 0 2vh 0;
     font-size: 25px;
     color: rgb(32, 32, 32);
 }
@@ -49,10 +49,12 @@
     max-width: 700px;
     display: flex;
     flex-direction: column;
+
+    margin: 0 0 2vh 0;
 }
 
 .product-popup-container .product-popup .summaries .summary {
-    padding: 10px 20px 20px 20px    ;
+    padding: 10px 20px 20px 20px;
     background-color: rgb(245, 245, 245);
     border: 1px solid rgb(190, 190, 190);
     border-radius: 10px;
@@ -79,8 +81,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
-    margin: 2vh 0 0 0;
 }
 
 .product-popup-container .product-popup .specs-container h1 {
